plugins {
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'

}


group = 'com.SpringProject'
version = '0.0.1-SNAPSHOT'


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

configurations.all {
	exclude group: 'org.slf4j', module: 'slf4j-simple'
}

java {
	sourceCompatibility = '17'
	targetCompatibility = '17'
}

repositories {
	mavenCentral()
	maven {
		url 'https://github.com/psiegman/mvn-repo/raw/master/releases'
	}}

test {
	useJUnitPlatform()
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.modelmapper:modelmapper:2.4.2'
	implementation 'jakarta.json:jakarta.json-api:2.1.1'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'nl.siegmann.epublib:epublib-core:3.1'
	implementation 'org.jsoup:jsoup:1.15.4'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
}
